tests/NormalTests/paczka1/small_fuzzy/71570261.err
Error in line 8: hQFqm A501 38,6
Error in line 6: qJghh7 S887 34,2
